Issue 34974: DataSpace - mAb reports needs horizontal scroll

--- a/app/Connector/packages/connector-theme/sass/var/view/_Learn.scss
+++ b/app/Connector/packages/connector-theme/sass/var/view/_Learn.scss
@@ -702,6 +702,14 @@ img.detail-has-data-small {
   min-height: 200px;
 }
 
+.reportViewMAb {
+  padding-top: $sectionTopPadding;
+  background-color: white;
+  padding-left: $pageLeftPadding;
+  min-height: 200px;
+  overflow: auto;
+}
+
 .reportContent {
   padding-left: 28px;
   padding-top: 10px;
